2001-01-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/initspin.h: Make all names namespace clean.
	* sysdeps/unix/sysv/linux/hppa/bits/initspin.h: Likewise.
	* manager.c: Adjust for namespace cleanup in bits/initspin.h.
	* pthread.c: Likewise.
	* spinlock.h: Likewise.
	* sysdeps/pthread/pthread.h: Likewise.

2001-01-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/pthreadtypes.h: Define pthread_attr_t also
	as struct __pthread_attr_s.

	* semaphore.h (sem_t): Cleanup namespace, rename status and
	spinlock elements.

2001-01-13  Jakub Jelinek  <jakub@redhat.com>

	* pthread.c (pthread_onexit_process): Clear
	__pthread_manager_thread_bos after freeing it.
	* Makefile (tests): Add ex16.
	* Examples/ex16.c: New file.

2001-01-11  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (CFLAGS-pthread.c): Pass -DHAVE_Z_NODELETE if ld supports
	-z nodelete.
	* pthread.c (pthread_exit_process): Rename to...
	(pthread_onexit_process): ...this.
	(pthread_atexit_process, pthread_atexit_retcode): New.
	(pthread_initialize): Call __cxa_atexit instead of __cxa_on_exit
	and only if HAVE_Z_NODELETE is not defined.
	(__pthread_initialize_manager): Register pthread_atexit_retcode
	with __cxa_atexit.

2001-01-11  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (pthread_initialize): Use __cxs_on_exit not __cxa_atexit.

2001-01-11  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (tests): Add ex15.
	* Examples/ex15.c: New test.

2001-01-08  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (pthread_exit_process): Free memory allocated for
	manager stack.

2000-12-31  Ulrich Drepper  <drepper@redhat.com>

	* manager.c (pthread_alloca_stack): Remove MAP_FIXED from mmap calls.
	(pthread_free): Always unmap the stack.  It's safe now that we don't
	use MAP_FIXED to allocate stacks.

2000-12-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/pspinlock.c: Don't include pt-machine.h here.
